Add material app blueprint and views
The code changes include adding the material app blueprint and views. This allows for the creation of material-related pages and functionality.

--- a/rfrct/Dockerfile
+++ b/rfrct/Dockerfile
@@ -9,6 +9,7 @@ ENV HOME /home/${USR}
 ENV PROJECT_DIR ${HOME}/code
 ENV PYTHONUNBUFFERED 1
 
+
 # module holding our project instance
 ENV FLASK_APP=wsgi.py
 ENV FLASK_DEBUG=1
@@ -19,14 +20,15 @@ ENV FLASK_CONFIG_DEFAULT=Dev
 RUN addgroup -g 1000 ${USR}\
   && adduser -S -h ${HOME} -u 1000 -G ${USR} ${USR}
 
-COPY --chown=nonroot:nonroot . ${PROJECT_DIR}
+
+
 RUN apk add --no-cache --update fish
-RUN apk add --no-cache --update --virtual \
-  gcc\
-  make\
-  g++\
-  zlib-dev\
-  libc-dev\&& pip --no-cache-dir install -r ${PROJECT_DIR}/requirements.txt
+RUN apk add --no-cache --update --virtual gcc make zlib-dev libc-dev git
+RUN pip install --upgrade pip wheel setuptools requests
+COPY --chown=nonroot:nonroot ./requirements.txt ${PROJECT_DIR}/requirements.txt
+RUN pip --no-cache-dir install -r ${PROJECT_DIR}/requirements.txt
+
+COPY --chown=nonroot:nonroot . ${PROJECT_DIR}
 
 # we make sure to run the project as a regular user
 USER ${USR}
