--- a/rfrct/requirements.txt
+++ b/rfrct/requirements.txt
@@ -1,14 +1,17 @@
-wheel
-pytest
+argon2_cffi
+bleach
 empty
-flask
-flask-testing
-flask-security-too
-flask-admin
-flask-mongoengine-3[wtf,toolbar]
-flask-wtf
 eventlet
-flask-socketio
+flask
+flask_static_compress
+flask-admin
 flask-debugtoolbar
 flask-login
-argon2_cffi
+flask-mongoengine-3[wtf,toolbar]
+flask-security-too
+flask-socketio
+flask-testing
+flask-wtf
+pytest
+wheel
+git+https://github.com/iosusan/flask-nav.git
